--- a/02_7_kubernetes.ipynb
+++ b/02_7_kubernetes.ipynb
@@ -158,9 +158,8 @@
     "\n",
     "| Tipo | Ejemplo | Uso |\n",
     "| -- | -- | -- |\n",
-    "| Por versión      | models:/churn_model/1  | Para reproducibilidad exacta |\n",
-    "| Por alias | models:/churn_model@Production              | Ideal para despliegues |\n",
-    "| Por run_id | runs:/<RUN_ID>/model                      | Para debugging o desarrollo |\n",
+    "| Por versión      | models:/catalogo.esquema.modelo/version  | Para reproducibilidad exacta |\n",
+    "| Por alias | models:/catalogo.esquema.modelo@alias              | Ideal para despliegues |\n",
     "\n",
     "📘 Docs: [MLflow Model Registry URIs](https://mlflow.org/docs/latest/ml/model-registry/)"
    ]
@@ -182,10 +181,15 @@
     "\n",
     "Vale, ahora sí, vamos a descargar el modelo localmente.\n",
     "```\n",
-    "from mlflow.artifacts import download_artifacts\n",
+    "import mlflow\n",
     "\n",
-    "MODEL_URI = \"models:/<NOMBRE_DEL_MODELO>@Production\"\n",
-    "local_path = download_artifacts(artifact_uri=MODEL_URI)\n",
+    "mlflow.set_registry_uri(\"databricks-uc\")  \n",
+    "\n",
+    "# Descarga los artefactos\n",
+    "model_uri = \"models:/<CATALOGO>.<ESQUEMA>.<MODELO>/1\"  # o \"@Champion\"\n",
+    "local_dir = \"/tmp/mi_modelo\"\n",
+    "\n",
+    "mlflow.artifacts.download_artifacts(artifact_uri=model_uri, dst_path=local_dir))\n",
     "```\n",
     "Esto te deja una carpeta con todo: el modelo, el MLmodel, dependencias y metadata.\n",
     "\n",
@@ -213,7 +217,11 @@
     "import mlflow\n",
     "import pandas as pd\n",
     "\n",
-    "model = mlflow.pyfunc.load_model(\"models:/<NOMBRE_DEL_MODELO>@Production\")\n",
+    "# Carga desde ruta local y predice\n",
+    "import pandas as pd\n",
+    "model = mlflow.pyfunc.load_model(local_dir)\n",
+    "X = pd.DataFrame([{\"feature1\": 0.3, \"feature2\": 1.2}])\n",
+    "print(model.predict(X))\n",
     "\n",
     "# Ejemplo de predicción\n",
     "X = pd.DataFrame([\n",
@@ -242,12 +250,12 @@
    "source": [
     "## 7. Empaquetar el modelo como contenedor Docker\n",
     "\n",
-    "Ahora podemos convertir tu modelo en una API lista para servir inferencias.\n",
+    "Como ya tienes el modelo descargado a disco, puedes construir el contenedor directamente desde esa carpeta, para convertirlo en una API lista para servir inferencias.\n",
     "\n",
     "```\n",
     "mlflow models build-docker \\\n",
-    "  -m \"models:/<NOMBRE_DEL_MODELO>@Production\" \\\n",
-    "  -n \"<tu_repo>/<tu_imagen>:v1\" \\\n",
+    "  -m \"local_dir\" \\ #apunta al path local donde está el modelo\n",
+    "  -n \"<tu_repo>/<tu_imagen>:v1\" \\ #nombre y etiqueta de la imagen Docker que se generará\n",
     "  --enable-mlserver\n",
     "```\n",
     "Esto construye una imagen con:\n",
@@ -293,6 +301,8 @@
     "  -d '{\"inputs\": [{\"feature1\": 0.3, \"feature2\": 1.2}]}'\n",
     "```\n",
     "Si obtienes un JSON con predicciones, ya tienes tu modelo sirviendo en tu máquina local 🚀\n",
+    "\n",
+    "Docs: [Serving models locally](https://mlflow.org/docs/latest/ml/model/#local-deployment)\n",
     "\n"
    ]
   },
@@ -362,6 +372,24 @@
     "```\n",
     "\n",
     "📘 Docs: [Deploy MLflow Model to Kubernetes](https://mlflow.org/docs/latest/ml/model/#deployment)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "bc457704-5225-451c-8f36-f2b089311e1d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### ¡Felicidades! Ya tendríamos funcionando nuestro modelo en local\n",
+    "\n",
+    "Ahora vamos a continuar aprendiendo sobre las [AI functions]($./03_AI_functions)\n"
    ]
   }
  ],
