--- a/03_AI_functions.ipynb
+++ b/03_AI_functions.ipynb
@@ -639,6 +639,26 @@
     "from workshop_databricks.demo_ai_functions.reviews_structured_gold\n",
     "where sentiment = 'negative';"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a6b5bb8b-2622-495e-af3c-465a314af0b3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### ¡Felicidades! Ya hemos aprendido como usar alguna de las AI functions en Databricks \n",
+    "\n",
+    "Os invitamos a seguir investigando y aprendiendo más, agilizarán mucho vuestro trabajo del dia a dia.\n",
+    "\n",
+    "Ahora vamos a continuar con [Agent Bricks]($./04_agent_bricks)"
+   ]
   }
  ],
  "metadata": {
